fixed squished color theme selection; fixed error when brightness val not given; implemented power button of light sliders being reactive

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -172,8 +172,8 @@ a.active {
 /* theme color selection */
 .themeColorOption {
     border-radius: 50%;
-    width: 2em;
-    height: 2em;
+    width: 30px;
+    height: 30px;
     margin: .5rem;
     background-color: black;
     cursor: pointer;
